fix(date-time-picker): add extra styling to fix layout issues

--- a/src/components/DatePicker/DatePicker.scss
+++ b/src/components/DatePicker/DatePicker.scss
@@ -8,5 +8,15 @@
 .react-datepicker__time-name {
 	margin: 2.3px;
 	width: 23px;
-	line-height:23.8px
+	line-height: 23.8px
+}
+
+// Issues with datetime picker on windows: https://github.com/Hacker0x01/react-datepicker/issues/1973
+.react-datepicker__navigation--next--with-time:not(.react-datepicker__navigation--next--with-today-button) {
+	left: 180px;
+}
+
+.react-datepicker__time-container .react-datepicker__time .react-datepicker__time-box ul.react-datepicker__time-list {
+  height: calc(195px + (1.7rem / 2)) !important;
+	width: calc(100% - 1px);
 }
